Add characters and dialogue to overworld

--- a/index.html
+++ b/index.html
@@ -121,37 +121,37 @@
     <script src="./js/content/enemies.js"></script>
 
     <!-- State -->
-    <script src="./js/state/playerState.js"></script>
+    <script src="./js/state/PlayerState.js"></script>
 
     <!-- Scripts -->
     <script src="./js/overworld/utils.js"></script>
-    <script src="./js/overworld/directionInput.js"></script>
-    <script src="./js/overworld/overworld.js"></script>
-    <script src="./js/overworld/gameObject.js"></script>
-    <script src="./js/overworld/person.js"></script>
-    <script src="./js/overworld/pizzaStone.js"></script>
-    <script src="./js/overworld/sprite.js"></script>
-    <script src="./js/overworld/overworldMap.js"></script>
-    <script src="./js/overworld/overworldEvent.js"></script>
-    <script src="./js/overworld/textMessage.js"></script>
-    <script src="./js/overworld/keyPressListener.js"></script>
-    <script src="./js/overworld/revealingText.js"></script>
-    <script src="./js/overworld/sceneTransition.js"></script>
-    <script src="./js/overworld/keyboardMenu.js"></script>
-    <script src="./js/overworld/hud.js"></script>
-    <script src="./js/overworld/pauseMenu.js"></script>
-    <script src="./js/overworld/craftingMenu.js"></script>
-    <script src="./js/overworld/progress.js"></script>
-    <script src="./js/overworld/titleScreen.js"></script>
+    <script src="./js/overworld/DirectionInput.js"></script>
+    <script src="./js/overworld/Overworld.js"></script>
+    <script src="./js/overworld/GameObject.js"></script>
+    <script src="./js/overworld/Person.js"></script>
+    <script src="./js/overworld/PizzaStone.js"></script>
+    <script src="./js/overworld/Sprite.js"></script>
+    <script src="./js/overworld/OverworldMap.js"></script>
+    <script src="./js/overworld/OverworldEvent.js"></script>
+    <script src="./js/overworld/TextMessage.js"></script>
+    <script src="./js/overworld/KeyPressListener.js"></script>
+    <script src="./js/overworld/RevealingText.js"></script>
+    <script src="./js/overworld/SceneTransition.js"></script>
+    <script src="./js/overworld/KeyboardMenu.js"></script>
+    <script src="./js/overworld/Hud.js"></script>
+    <script src="./js/overworld/PauseMenu.js"></script>
+    <script src="./js/overworld/CraftingMenu.js"></script>
+    <script src="./js/overworld/Progress.js"></script>
+    <script src="./js/overworld/TitleScreen.js"></script>
 
     <!-- Battle -->
-    <script src="./js/battle/battle.js"></script>
-    <script src="./js/battle/combatant.js"></script>
-    <script src="./js/battle/team.js"></script>
-    <script src="./js/battle/submissionMenu.js"></script>
-    <script src="./js/battle/replacementMenu.js"></script>
-    <script src="./js/battle/battleEvent.js"></script>
-    <script src="./js/battle/turnCycle.js"></script>
+    <script src="./js/battle/Battle.js"></script>
+    <script src="./js/battle/Combatant.js"></script>
+    <script src="./js/battle/Team.js"></script>
+    <script src="./js/battle/SubmissionMenu.js"></script>
+    <script src="./js/battle/ReplacementMenu.js"></script>
+    <script src="./js/battle/BattleEvent.js"></script>
+    <script src="./js/battle/TurnCycle.js"></script>
     <script src="./js/battle/battleAnimations.js"></script>
 
     <!-- Memory -->
