Add ending screen

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           <button id="sleep">bedtime!</button>
           <button id="play">play</button>
           <button id="restart">restart</button>
+          <button id="start">start</button>
       </div>
   </section>
 
@@ -150,6 +151,7 @@
     <script src="./js/overworld/Progress.js"></script>
     <script src="./js/overworld/HelpMenu.js"></script>
     <script src="./js/overworld/TitleScreen.js"></script>
+    <script src="./js/overworld/EndingScreen.js"></script>
 
     <!-- Battle -->
     <script src="./js/battle/Battle.js"></script>
@@ -169,7 +171,7 @@
     <script type="text/javascript" src="./js/tamagotchi.js"></script>
 
     <!-- Treasure -->
-    <script
+    <!-- <script
     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
     integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
     crossorigin="anonymous"
@@ -181,7 +183,7 @@
     <script src="./js/classes/treasureSprite.js"></script>
     <script src="./js/classes/player.js"></script>
     <script src="./js/eventListeners.js"></script>
-    <script src="./js/treasure.js"></script>
+    <script src="./js/treasure.js"></script> -->
     
     <script src="./js/overworld/init.js"></script>
 
