Fade in and out of ending screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="./styles/keyboardMenu.css" type="text/css" rel="stylesheet">
     <link href="./styles/hud.css" type="text/css" rel="stylesheet">
     <link href="./styles/titleScreen.css" type="text/css" rel="stylesheet">
+    <link href="./styles/endingScreen.css" type="text/css" rel="stylesheet">
     <!-- Battle css -->
     <link href="./styles/battle.css" type="text/css" rel="stylesheet">
     <link href="./styles/combatant.css" type="text/css" rel="stylesheet">
