Add treasure game

--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
   </head>
   <body>
 
-  <section class="knuckles-game">
-      <canvas class="treasure-canvas"></canvas>
-  </section>
-
   <section class="overworld">
     <div class="game-container" >
       <canvas class="game-canvas" width="352" height="198"></canvas>
@@ -85,14 +81,14 @@
     <script src="./js/battle/battleAnimations.js"></script>
 
     <!-- Memory -->
-    <script src="./js/memory.js"></script>
+    <script src="./js/Memory.js"></script>
 
     <!-- Tamagotchi -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/tamagotchi.js"></script>
+    <script type="text/javascript" src="./js/Tamagotchi.js"></script>
 
     <!-- Treasure -->
-    <!-- <script
+    <script
     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
     integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
     crossorigin="anonymous"
@@ -103,8 +99,7 @@
     <script src="./js/classes/collisionBlock.js"></script>
     <script src="./js/classes/treasureSprite.js"></script>
     <script src="./js/classes/player.js"></script>
-    <script src="./js/eventListeners.js"></script>
-    <script src="./js/treasure.js"></script> -->
+    <script src="./js/treasure.js"></script>
     
     <script src="./js/overworld/init.js"></script>
 
