--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <script src="./js/battle/TurnCycle.js"></script>
     <script src="./js/battle/battleAnimations.js"></script>
 
+    <!-- Runner -->
+    <script src="./js/Runner.js"></script>
+
     <!-- Memory -->
     <script src="./js/Memory.js"></script>
 
