Rename in index

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     ></script>
     <script src="./js/utils.js"></script>
     <script src="./js/data/collisions.js"></script>
-    <script src="./js/classes/collisionBlock.js"></script>
-    <script src="./js/classes/treasureSprite.js"></script>
-    <script src="./js/classes/player.js"></script>
-    <script src="./js/treasure.js"></script>
+    <script src="./js/classes/CollisionBlock.js"></script>
+    <script src="./js/classes/TreasureSprite.js"></script>
+    <script src="./js/classes/Player.js"></script>
+    <script src="./js/Treasure.js"></script>
     
     <script src="./js/overworld/init.js"></script>
 
